# virtus

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml
include/: assignment.h  calculate.h  calendar.h  class.h  grades.h  home.h  interface.h  onboarding.h  settings.h
src/: assignment.cc  calculate.cc  calendar.cc  class.cc  grades.cc  home.cc  interface.cc  main.cc  onboarding.cc  settings.cc
